--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
 			<dependency>
 				<groupId>payara-embedded-bug</groupId>
 				<artifactId>payara-embedded</artifactId>
-				<type>jar</type>
-				<version></version>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>payara-embedded-bug</groupId>
