simplified recreation; fixed an error in the manifest for the payara-embedded module. A version tag has been commented out from resource-bug/pom.xml that seems to have caused the code to work, whereas the server in fact disregarded to run the code in org.bug.InjectResource.

--- a/resource-bug/pom.xml
+++ b/resource-bug/pom.xml
@@ -10,10 +10,7 @@
 
 	<name>resource-bug</name>
 	<artifactId>resource-bug</artifactId>
-<<<<<<< HEAD
-	<version>0.0.1-snapshot</version>
-=======
->>>>>>> recreated
+	<!-- 	<version>0.0.1-snapshot</version> -->
 	<packaging>ejb</packaging>
 
 	<build>
